# wotm

./: .gitignore  .luarc.json  CMakeLists.txt  LICENSE  README.md  build.cmd  index.html  launch.cmd  main.cpp
.claude/: settings.local.json
.github/workflows/: main.yml
data/: gfx.meta.lua  level00.lua  level01.lua  level1.lua  literals.ligma
planning/: levels.bofa  user-interface.bofa
src/: gamestate.cpp  gfxutil.cpp  level.cpp  levelscript.cpp  loading.cpp  main.cpp  platform.cpp  render.cpp  scripting.cpp  splash.cpp  synth.cpp
src/inc/: const.h  gamestate.h  gfxutil.h  level.h  levelscript.h  loading.h  main.h  platform.h  render.h  scripting.h  splash.h  synth.h
